# Concurrent_orderbook

./: .gitignore  CMakeLists.txt  README.md
.bkit/: agent-state.json
benchmarks/: bench_pool.cpp  bench_sharding.cpp
concurrent_orderbook/: CMakeLists.txt  README.md
concurrent_orderbook/benchmarks/: bench_comparison.cpp
concurrent_orderbook/src/: order_book.cpp
concurrent_orderbook/tests/: test_correctness.cpp
docs/: .bkit-memory.json  .pdca-status.json  cancel_order_bug.md  performance_analysis.md  portfolio_analysis.md
include/: lock_policy.h  order.h  order_book.h  order_pool.h  sharded_order_book.h
kautenja_ref/tools/matching/: scenario-15.txt
multithread_orderbook/: BENCHMARK_RESULTS.md  FUTURE_WORK.md  INTERVIEW_GUIDE.md  README.md
multithread_orderbook/step1_baseline/: CMakeLists.txt  README.md
multithread_orderbook/step1_baseline/include/: order.h  order_book.h
multithread_orderbook/step1_baseline/src/: order_book.cpp
multithread_orderbook/step1_baseline/tests/: test_correctness.cpp
multithread_orderbook/step2_coarse_lock/: CMakeLists.txt  README.md
multithread_orderbook/step2_coarse_lock/benchmarks/: bench_contention.cpp
multithread_orderbook/step2_coarse_lock/include/: order.h  thread_safe_book.h
multithread_orderbook/step2_coarse_lock/src/: thread_safe_book.cpp
multithread_orderbook/step3_rwlock/: CMakeLists.txt  README.md
multithread_orderbook/step3_rwlock/benchmarks/: bench_scaling.cpp
multithread_orderbook/step3_rwlock/include/: fine_grained_book.h  order.h
multithread_orderbook/step3_rwlock/src/: fine_grained_book.cpp
results/: benchmark_results.csv  pool_results.csv  sharding_results.csv
scripts/: plot_results.py  plot_v2_results.py
src/: order_book.cpp  order_pool.cpp  sharded_order_book.cpp
tests/: test_correctness.cpp
